assets/css/modal.css
.thin-ui-modal-dialog {
  align-items: center;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.1);
  border: none;
  display: flex;
  height: 100%;
  justify-content: center;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}
  .thin-ui-modal-dialog * {
    box-sizing: border-box;
  }
  .thin-ui-modal-dialog.temp {
    background-color: transparent;
  }
  .thin-ui-modal-dialog.temp .thin-ui-modal-window {
    background-color: #529952;
    border: 2px solid #000;
    border-radius: 8px;
    box-shadow: none;
    color: #fff;
    pointer-events: none;
    position: absolute;
    top: 25%;
    width: fit-content;
  }

.thin-ui-modal-window {
  --animate-duration: 100ms;
  background-color: #fff;
  border: 4px solid #458145;
  border-top-width: 0;
  box-shadow: 0 0 0 4px rgb(0 0 0 / 15%), 0 0 16px rgb(0 0 0 / 25%);
  display: flex;
  flex-flow: column wrap;
  margin: 0 1em;
  max-width: 500px;
  min-width: 80vw;
}
  .thin-ui-modal-window.debug {
    border-color: #715ec7;
  }

.thin-ui-modal-title {
  align-items: center;
  background-color: #529952;
  color: #fff;
  display: flex;
  font-weight: 500;
  justify-content: center;
  padding: 4px 16px;
  width: 100%;
}
  .thin-ui-modal-title.debug {
    background-color: #715ec7;
  }

.thin-ui-modal-close {
  background: none;
  border: 0 none;
  color: #fff;
  font-size: 26px;
  font-weight: inherit;
  font-family: inherit;
  height: auto;
  margin: 0;
  margin-left: auto;
  max-width: 26px;
}

.thin-ui-modal-text {
  margin: 10px 0;
  max-height: 500px;
  overflow-y: auto;
  padding: 0 16px;
}
  .thin-ui-modal-text ul,
  .thin-ui-modal-text {
    list-style-type: none;
    margin: 0;
    padding: 10px;
  }
    .thin-ui-modal-text ul ul {
      padding: 2px 10px;
    }
    .thin-ui-modal-text ul li {
      padding: 0;
    }
      .thin-ui-modal-text ul li span.solution-category {
        font-size: 20px;
        font-weight: 700;
      }
        .thin-ui-modal-text ul li span.solution-category + ul {
          background-color: #f8f8f8;
          border: 1px solid #222;
          margin-bottom: 10px;
          padding: 10px;
        }
          .thin-ui-modal-text ul li span.solution-category + ul li {
            margin-left: 0;
          }

  .thin-ui-modal-text dl dt {
    margin-left: 1em;
    min-height: 20px;
  }
  .thin-ui-modal-text dl dl {
    margin-left: 1em;
  }

.thin-ui-modal-button-group {
  margin: auto 0 16px 0;
  padding: 0 16px;
  display: flex;
  justify-content: space-between;
  flex-direction: row;
}
  .thin-ui-modal-button-group button {
    font-weight: inherit;
    font-family: inherit;
  }

.thin-ui-button {
  font-family: inherit;
  font-weight: 400;
  display: inline-block;
  width: fit-content;
  position: relative;
  white-space: nowrap;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 0 none;
  border-radius: 2px;
}
  .thin-ui-button:hover {
    box-shadow: inset 0 99px 0 rgba(0, 0, 0, 0.05);
    text-decoration: none;
  }
.thin-ui-button-primary {
  color: #ffffff;
  background-color: #529952;
}
.thin-ui-button-secondary {
  color: #000000;
  background-color: #bce2bc;
}
.thin-ui-button-neutral {
  color: #000000;
  background-color: #888;
}
.thin-ui-button-action {
  color: #ffffff;
  background-color: var(--thin-ui-action);
}
.thin-ui-button-mini {
  padding: 4px 12px;
  font-size: 12px;
}
.thin-ui-button-small {
  padding: 6px 18px;
  font-size: 13px;
}
.thin-ui-button-regular {
  padding: 8px 24px;
  font-size: 14px;
}
.thin-ui-button-large {
  padding: 12px 32px;
  font-size: 16px;
}
.thin-ui-button-giant {
  padding: 16px 36px;
  font-size: 20px;
}
.thin-ui-button-hero {
  padding: 16px 48px;
  font-size: 18px;
  border-radius: 38px;
}
.thin-ui-button-rounded {
  border-radius: 64px;
}

.thin-ui-modal-button-group.debug button.thin-ui-button-primary {
  background-color: #715ec7;
  color: #ffffff;
}
.thin-ui-modal-button-group.debug button.thin-ui-button-secondary {
  background-color: #dbbce2;
  color: #000000;
}

